--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <!-- Left nav links -->
       <div class="navbar-nav">
-        <a class="nav-link active" href="/">Home</a>
+        <a class="nav-link" href="/"><i class="fa-solid fa-house"></i></a> 
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
