--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -3,7 +3,7 @@
     background-color: rgb(204, 73, 73);
     color: #fff;
     border-radius: 25px;
-    padding: 0.6rem 1.2rem;
+    padding: 0.5rem 1rem;
     font-weight: 500;
     border: none;
     white-space: nowrap;
@@ -14,159 +14,115 @@
   }
 
   .btn-search i {
-    margin-right: 0.5rem;
+    margin-right: 0.4rem;
   }
 
   .search-inp {
     border-radius: 25px;
-    padding: 0.6rem 1.2rem;
+    padding: 0.5rem 1rem;
     font-size: 1rem;
     width: 100%;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     border: 1px solid #ccc;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   }
 
   .search-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-    max-width: 600px;
+    flex-grow: 1;
+    max-width: 500px;
     margin: 0 auto;
     padding: 0 1rem;
-    order: 2;
   }
+
   .search-form {
-      display: flex;
-      align-items: center;
-    }
-
-  .navbar .nav-link {
-    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    width: 100%;
   }
 
-  /* Responsive fix for mobile */
+  .search-container {
+    display: flex;
+    flex-grow: 1;
+  }
+
   @media (max-width: 768px) {
-    .navbar .container-fluid {
-      flex-wrap: wrap;
-    }
-
     .search-wrapper {
-      width: 100%;
-      padding: 0.5rem 1rem;
       order: 3;
+      width: 100%;
+      margin: 10px 0;
     }
 
-    .search-wrapper {
-      
-      display: flex;
-      align-items: center;
-      margin-left: auto;
-      margin-right: 10px;
-    }
-    .search-container {
-      display: flex;
-      align-items: center;
-      transition: width 0.3s ease;
+    .search-form {
+      flex-direction: row;
+      width: 100%;
     }
 
     .search-inp {
-      flex: 1;
-      min-width: 0;
       font-size: 0.9rem;
-      padding: 0.5rem 1rem;
-      transition: width 0.3s ease;
-    }
-       /* Desktop */
-       @media (min-width: 768px) {
-      .search-input {
-        width: 200px;
-        display: block;
-      }
-    }
-
-    /* Mobile */
-    @media (max-width: 767px) {
-      .search-input {
-        width: 0;
-        padding: 0;
-        border: none;
-        visibility: hidden;
-      }
-
-      .search-container.active .search-inp{
-        width: 150px;
-        padding: 0.375rem 0.75rem;
-        border: 1px solid #ced4da;
-        visibility: visible;
-        margin-right: 5px;
-      }
+      padding: 0.4rem 0.8rem;
     }
 
     .btn-search {
       font-size: 0.9rem;
-      padding: 0.5rem 1rem;
+      padding: 0.4rem 0.8rem;
     }
 
     .navbar-collapse {
-      width: 100%;
       margin-top: 0.5rem;
-    }
-
-    .navbar-toggler {
-      order: 1;
-      margin-left: auto;
-    }
-
-    .nav-link {
       text-align: center;
+    }
+
+    .navbar-nav {
+      width: 100%;
+    }
+
+    .nav-item {
+      margin: 5px 0;
     }
   }
 </style>
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
-  <div class="container-fluid d-flex align-items-center">
+  <div class="container-fluid">
 
-    <!-- Brand icon (left) -->
-    <a class="navbar-brand" href="/listings">
-      <i class="fa-solid fa-compass"></i>
-    </a>
+    <!-- Brand + Home Icon -->
+    <div class="d-flex align-items-center">
+      <a class="navbar-brand me-2" href="/listings">
+        <i class="fa-solid fa-compass"></i>
+      </a>
+      <a class="nav-link d-none d-md-block" href="/">
+        <i class="fa-solid fa-house"></i>
+      </a>
+    </div>
 
-    <!-- Home icon (next to brand) -->
-    <a class="nav-link d-none d-md-block" href="/">
-      <i class="fa-solid fa-house"></i>
-    </a>
-      <!-- Search bar (centered & responsive) -->
-      <div class="search-wrapper">
-        <form class="d-flex w-100 search-form" role="search" id="searchForm">
-          <div class="search-container">
-          <input class="form-control search-inp me-2" type="search" placeholder="Search Destinations" aria-label="Search">
+    <!-- Search Bar (centered and responsive) -->
+    <div class="search-wrapper">
+      <form class="search-form" role="search" id="searchForm">
+        <div class="search-container w-100">
+          <input class="form-control search-inp me-2" type="search" placeholder="Search Destinations" aria-label="Search" />
           <button class="btn btn-search" type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>Search
           </button>
-          </div>
-        </form>
-      </div>
+        </div>
+      </form>
+    </div>
 
-    <!-- Toggler (right on mobile) -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Mobile Toggle Button -->
+    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-  
-
-    <!-- Collapsible nav links -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+    <!-- Nav Items -->
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto align-items-center">
+        <li class="nav-item">
           <a class="nav-link" href="/listings">Explore</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/listings/new">Wanderlust your home</a>
         </li>
-      
+
         <% if (!currUser) { %>
           <li class="nav-item">
             <a class="nav-link" href="/signup"><strong>Sign Up</strong></a>
@@ -175,6 +131,7 @@
             <a class="nav-link" href="/login"><strong>Log in</strong></a>
           </li>
         <% } %>
+
         <% if (currUser) { %>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Log out</a>
@@ -182,6 +139,5 @@
         <% } %>
       </ul>
     </div>
-
   </div>
 </nav>
