--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,12 +1,13 @@
 <style>
+  /* Main search button styling */
   .btn-search {
     background-color: rgb(204, 73, 73);
     color: #fff;
     border-radius: 25px;
-    padding: 0.5rem 1rem;
+    padding: 0.4rem 0.8rem;
     font-weight: 500;
     border: none;
-    white-space: nowrap;
+    font-size: 0.9rem;
   }
 
   .btn-search:hover {
@@ -14,69 +15,68 @@
   }
 
   .btn-search i {
-    margin-right: 0.4rem;
+    margin-right: 0.3rem;
   }
 
   .search-inp {
     border-radius: 25px;
-    padding: 0.5rem 1rem;
+    padding: 0.4rem 0.8rem;
     font-size: 1rem;
-    width: 100%;
     border: 1px solid #ccc;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    flex-grow: 1;
   }
 
   .search-wrapper {
-    flex-grow: 1;
     max-width: 500px;
     margin: 0 auto;
     padding: 0 1rem;
+    width: 100%;
   }
 
   .search-form {
     display: flex;
     align-items: center;
-    width: 100%;
-  }
-
-  .search-container {
-    display: flex;
-    flex-grow: 1;
+    gap: 0.5rem;
   }
 
   @media (max-width: 768px) {
     .search-wrapper {
       order: 3;
       width: 100%;
-      margin: 10px 0;
+      padding: 0.5rem 1rem;
     }
 
     .search-form {
       flex-direction: row;
-      width: 100%;
     }
 
     .search-inp {
-      font-size: 0.9rem;
-      padding: 0.4rem 0.8rem;
+      font-size: 0.85rem;
     }
 
     .btn-search {
-      font-size: 0.9rem;
-      padding: 0.4rem 0.8rem;
+      font-size: 0.8rem;
+      padding: 0.35rem 0.7rem;
     }
 
     .navbar-collapse {
       margin-top: 0.5rem;
       text-align: center;
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 1rem;
+      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
     }
 
-    .navbar-nav {
-      width: 100%;
+    .navbar-nav .nav-item {
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 10px;
     }
 
-    .nav-item {
-      margin: 5px 0;
+    .navbar-nav .nav-link {
+      padding: 0.6rem;
+      font-weight: 500;
     }
   }
 </style>
@@ -84,36 +84,29 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
 
-    <!-- Brand + Home Icon -->
-    <div class="d-flex align-items-center">
-      <a class="navbar-brand me-2" href="/listings">
-        <i class="fa-solid fa-compass"></i>
-      </a>
-      <a class="nav-link d-none d-md-block" href="/">
-        <i class="fa-solid fa-house"></i>
-      </a>
-    </div>
+    <!-- Logo -->
+    <a class="navbar-brand" href="/listings">
+      <i class="fa-solid fa-compass"></i>
+    </a>
 
-    <!-- Search Bar (centered and responsive) -->
-    <div class="search-wrapper">
-      <form class="search-form" role="search" id="searchForm">
-        <div class="search-container w-100">
-          <input class="form-control search-inp me-2" type="search" placeholder="Search Destinations" aria-label="Search" />
-          <button class="btn btn-search" type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>Search
-          </button>
-        </div>
-      </form>
-    </div>
-
-    <!-- Mobile Toggle Button -->
+    <!-- Toggler for mobile -->
     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Nav Items -->
+    <!-- Search Bar -->
+    <div class="search-wrapper">
+      <form class="search-form" role="search" id="searchForm">
+        <input class="form-control search-inp" type="search" placeholder="Search Destinations" aria-label="Search" />
+        <button class="btn btn-search" type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </form>
+    </div>
+
+    <!-- Navigation Items -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto align-items-center">
         <li class="nav-item">
@@ -122,7 +115,6 @@
         <li class="nav-item">
           <a class="nav-link" href="/listings/new">Wanderlust your home</a>
         </li>
-
         <% if (!currUser) { %>
           <li class="nav-item">
             <a class="nav-link" href="/signup"><strong>Sign Up</strong></a>
@@ -131,7 +123,6 @@
             <a class="nav-link" href="/login"><strong>Log in</strong></a>
           </li>
         <% } %>
-
         <% if (currUser) { %>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Log out</a>
