Updated navbar UI with new search styling and layout

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -42,6 +42,7 @@
   display: flex;
   align-items: center;
   margin-left: auto;
+  margin-top: -40px;
 }
 
 
@@ -122,6 +123,7 @@
   <div class="container-fluid">
 
     <!-- Logo -->
+<div class="setall">
     <a class="navbar-brand" href="/listings">
       <i class="fa-solid fa-compass"></i>
     </a>
@@ -138,6 +140,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
+</div>
     <!-- Search Bar -->
     <div class="search-wrapper">
       <form class="search-form" role="search" id="searchForm">
