--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -42,7 +42,7 @@
   display: flex;
   align-items: center;
   margin-left: auto;
-  margin-top: -40px;
+  gap: 0.5rem;
 }
 
 
@@ -116,6 +116,11 @@
       display: flex !important;
       align-items: center;
     }
+  }
+  .setall{
+    display: flex;
+  align-items: center;
+  justify-content: space-between;
   }
 </style>
 
